<resources>
    <string name="app_name">shopdeviz</string>
    <string name="menu_home">Home</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_order">Order</string>
    <string name="menu_wallet">Wallet</string>
    <string name="menu_profile">Profile</string>

    <string name="loading">Loading</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started</string>

    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_apple">Continue with Apple</string>
    <string name="lets_you_in">Let\'s you in</string>
    <string name="sign_in_with_password">Sign in with password</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="or">or</string>

</resources>