<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/space_huge">

    <ImageView
        android:layout_width="@dimen/size_image_huge"
        android:layout_height="@dimen/size_image_huge"
        android:layout_gravity="center"
        android:src="@drawable/logo_nike_dark" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/robotobold"
        android:text="@string/lets_you_in"
        android:textAlignment="center"
        android:textSize="@dimen/size_text_special" />

    <com.example.shopdeviz.presentation.ui.view.ItemOptionLogin
        android:id="@+id/btnFacebook"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height_large"
        app:src="@drawable/facebook"
        app:tvOption="@string/continue_with_facebook" />

    <com.example.shopdeviz.presentation.ui.view.ItemOptionLogin
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height_large"
        android:layout_marginVertical="@dimen/space_huge"
        app:src="@drawable/google"
        app:tvOption="@string/continue_with_google" />

    <com.example.shopdeviz.presentation.ui.view.ItemOptionLogin
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height_large"
        app:src="@drawable/apple"
        app:tvOption="@string/continue_with_apple" />


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.example.shopdeviz.presentation.ui.view.TextDivide
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_huge"
        app:tvTextDivide="@string/or" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.example.shopdeviz.presentation.ui.view.ButtonLarge
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tvButton="@string/sign_in_with_password" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/space_medium"
            android:text="@string/dont_have_an_account"
            android:textAlignment="center"
            android:textColor="@color/silver" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/robotobold"
            android:text="@string/sign_up"
            android:textAlignment="center" />

    </LinearLayout>


</LinearLayout>